# cwepr-processing

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cwepr_processing/: __init__.py  batch.py  io.py  plotting.py  processing.py
tests/: test_processing.py
